fix: mobile view why choose us? section was not responsive and resulted in cluttered text. it now becomes column after mobile view breakpoint.

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -882,6 +882,9 @@ textarea.error {
 	.middle-section-thin {
 		flex-direction: column;
 	}
+    .middle-section-fat {
+        flex-direction: column;
+    }
 	.middle-section-rebuttal {
 		flex-direction: column;
 	}
